feat : change schedule user to team